@@ -1,3 +1,7 @@
+2012-02-06:
+	* (seebs) Merge O_LARGEFILE into flags, not mode (thanks to Lei
+	  Liu at Wind River for the fix).
+
 2012-02-02:
 	* (seebs) stash dir name for DIR * from opendir using dirfd.
 	* (seebs) add closedir.
